maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: Missing closing brace `}' assumed here
while (!estSurbiscuit)
^